# aoc2021

./: .gitignore  CHANGELOG.md  README.dev.md  README.md  README.org  aoc2021.cabal  stack.yaml
app/: aoc.hs
prompt/: 01a.md  01b.md  02a.md  02b.md  03a.md  03b.md  04a.md  04b.md  05a.md  05b.md  06a.md  06b.md  07a.md  07b.md  08a.md  08b.md  09a.md  09b.md  10a.md  10b.md  11a.md  11b.md  12a.md  12b.md  13a.md  13b.md  14a.md  14b.md  15a.md  15b.md  16a.md  16b.md
src/AOC/: AStar.hs  Common.hs  Prelude.hs
src/AOC/Challenge/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day14old.hs  Day15.hs  Day16.hs  Day17.hs
template/: README.md.template
test/: Spec.hs
test-data/2021/: 06b.txt  07b.txt  08b.txt  11a.txt  12b.txt  13b.txt  14b.txt  16a.txt
